--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head><title>My app</title></head>
   <body>
-    <div id="app"></nav>
+    <div id="app"></div>
   </body>
 </html>
